# 5dgai-intensive

./: .claude-config  .dir-locals.el  .envrc.template  .gitignore  .hypothesis-init  .required-tools  .style.yapf  CHECKLIST.org  CLAUDE.md  CLAUDE.org  CONTRIBUTING.md  DEVELOPMENT.org  Dockerfile  LICENSE  Makefile  README.md  README.org  SETUP.org  automation-issue.md  discord.md  discord.org  docker-compose.yml  project_structure.md  project_structure.org  pyproject.toml  pyproject.toml.minimal  setup.org  setup.sh  tasks.md  tasks.org
.emacs.d/: env-loader.el  google-api.el  gptel-config.el  init.el  keybindings.el  org-config.el  package-setup.el  python-config.el  restclient-config.el  setup-init.org  zmq-config.el
.githooks/: pre-commit
.github/: issue-6-makefile-dependencies.md  issue-7-paper-summaries-dependency.md  labels.json  repo-metadata.json
api/: gemini-api-setup.org  gemini-api.org  gemini.http
config/: .envrc.template
docker-scripts/: run.sh
docs/: COE-API-KEY-EXPOSURE.md  PRECOMMIT-IMPLEMENTATION.md  SECURITY-ISSUE.md  banner-creation.md  cli-design-principles.md  hy-tutorial.org
examples/: basic_usage.py  discord_introduction.txt
images/: README.md
livestreams/: README.md
papers/: README.md
prompts/: summarize-paper-academic.md  summarize-paper.md
scripts/: capture-livestreams.sh  deps.sh  init_repo.sh  lint-all.sh  setup-emacs-env.sh  setup-livestream-cron.sh  setup_labels.sh  summarize-top-pdfs.hy  tangle-all.sh  tangle-org.sh
src/: doc2vec_ollama.hy  env_test.hy  env_test.py  gemini_client.hy  gemini_client.py  (+20 more)
(+94 files in other folders)
