[tool.poetry]
name = "gen-ai-intensive"
version = "0.1.0"
description = "Resources for Google's 5-Day Gen AI Intensive course"
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.org"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1"
tensorflow = "^2.15.0"
torch = "^2.2.1"
transformers = "^4.38.2"
datasets = "^2.17.1"
langchain = "^0.1.12"
langchain-openai = "^0.0.6"
llama-index = "^0.10.12"
openai = "^1.13.3"
anthropic = "^0.9.0"
google-generativeai = "^0.3.2"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
ipywidgets = "^8.1.2"
kaggle = "^1.5.16"
plotly = "^5.18.0"
gradio = "^4.19.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
httpx = "^0.27.0"
tqdm = "^4.66.2"
hy = "^1.0"
click = "^8.1.7"
pydantic = "^2.6.3"
typing-extensions = "^4.9.0"
google-cloud-aiplatform = "^1.86.0"
yt-dlp = "^2024.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
